<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:theme="@style/Theme.MultiModuleCourse">

    <TextView
        style="@style/TextAppearance.Headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="start"
        android:text="@string/auth_title" />

    <TextView
        style="@style/TextAppearance.TitleMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/email_title" />

    <com.google.android.material.textfield.TextInputEditText
        style="@style/TextInputEditText.Primary"
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_rounded_20dp"
        android:hint="@string/email_hint"
        android:paddingHorizontal="16dp" />

    <TextView
        style="@style/TextAppearance.TitleMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/password_title" />

    <com.google.android.material.textfield.TextInputEditText
        style="@style/TextInputEditText.Primary"
        android:layout_width="match_parent"
        android:id="@+id/editTextPassword"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_rounded_20dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:paddingHorizontal="16dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonContinue"
        style="@style/Button.Primary.NoInsets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/button_sign_in_title" />

    <TextView
        android:id="@+id/textViewToRegistration"
        style="@style/TextAppearance.ButtonSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/to_registration" />

    <TextView
        android:id="@+id/textViewToRestorePassword"
        style="@style/TextAppearance.ButtonSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:textColor="@color/green"
        android:gravity="center"
        android:text="@string/restore_password" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="32dp"
        android:background="@color/stroke" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/buttonToVk"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/bg_vk_logo"
            android:foreground="?attr/selectableItemBackground"
            android:src="@drawable/ic_vk_logo" />

        <ImageButton
            android:id="@+id/buttonToOk"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:background="@drawable/bg_gradient_ok_logo"
            android:foreground="?attr/selectableItemBackground"
            android:src="@drawable/ic_ok_logo" />
    </LinearLayout>
</LinearLayout>